--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>main.java.model.Main</mainClass>
+                    <mainClass>model.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
