--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <artifactId>r4ppz-first</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
