--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.r4ppz</groupId>
-    <artifactId>r4ppz-first</artifactId>
+    <artifactId>r4ppzapp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
